[gd_scene load_steps=4 format=3 uid="uid://ddvgko1av020q"]

[ext_resource type="Script" path="res://main.gd" id="1_1bh31"]
[ext_resource type="PackedScene" uid="uid://cttau0ginkmvm" path="res://board.tscn" id="1_bnje1"]
[ext_resource type="Texture2D" uid="uid://dsr64m6rkauid" path="res://asset/key.png" id="3_61s4v"]

[node name="Node" type="Node"]
script = ExtResource("1_1bh31")

[node name="board" parent="." instance=ExtResource("1_bnje1")]

[node name="Label" type="Label" parent="."]
offset_left = 800.0
offset_top = 20.0
offset_right = 1200.0
offset_bottom = 785.0
theme_override_font_sizes/font_size = 32
text = "Step 1  (Warden)  :
Flip coins however you want.
Once you are done with flipping, hide the Key."
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 800.0
offset_top = 20.0
offset_right = 1200.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 32
text = "Step 2 (Prisoner1): 
Flip a coin."
autowrap_mode = 2

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 800.0
offset_top = 20.0
offset_right = 1200.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 32
text = "Step 3 (Prisnoer2):
 Guess where the key is."
autowrap_mode = 2

[node name="InputHint" type="Label" parent="."]
offset_left = 800.0
offset_top = 324.0
offset_right = 1200.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 32
text = "Left Click: Flip Coin
Right Click: Hide key
"
autowrap_mode = 2

[node name="InputHint2" type="Label" parent="."]
visible = false
offset_left = 800.0
offset_top = 324.0
offset_right = 1200.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 32
text = "Left Click: Flip Coin
Space: Make the algorithm do the flip"
autowrap_mode = 2

[node name="InputHint3" type="Label" parent="."]
visible = false
offset_left = 800.0
offset_top = 324.0
offset_right = 1200.0
offset_bottom = 524.0
theme_override_font_sizes/font_size = 32
text = "Left Click: Make a guess"
autowrap_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 800.0
offset_top = 599.0
offset_right = 1200.0
offset_bottom = 799.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Rule/Original Video
[url]https://youtu.be/as7Gkm7Y7h4?si=-K9X2urMUoBQts3G[/url]"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_61s4v")

[node name="ResetButton" type="Button" parent="."]
offset_left = 965.0
offset_top = 549.0
offset_right = 1016.0
offset_bottom = 580.0
text = "Reset"

[node name="ResultColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 429.0
offset_top = 323.0
offset_right = 773.0
offset_bottom = 498.0
color = Color(0.220168, 0.114974, 0.0126023, 1)
metadata/_edit_group_ = true

[node name="ResultLabel" type="Label" parent="ResultColorRect"]
layout_mode = 0
offset_right = 340.0
offset_bottom = 88.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 64
text = "You Did IT!"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="ResultColorRect/ResultLabel"]
offset_left = 144.0
offset_top = 115.0
offset_right = 195.0
offset_bottom = 146.0
text = "Reset"

[connection signal="coin_flipped" from="board" to="." method="_on_board_coin_flipped"]
[connection signal="guess_made" from="board" to="." method="_on_board_guess_made"]
[connection signal="key_put" from="board" to="." method="_on_board_key_put"]
[connection signal="pressed" from="ResetButton" to="." method="_back_to_phase1"]
[connection signal="pressed" from="ResultColorRect/ResultLabel/ResetButton" to="." method="_back_to_phase1"]
